tests/v05-vertical-slice/reject/lambda_return_mismatch.hew
// Reject fixture: E_LAMBDA_RETURN_TYPE_MISMATCH
// An ask-shaped actor lambda whose body returns a different type than the
// declared reply type is rejected. The declared type is the contract for
// callers awaiting a reply via `Result<Reply, AskError>`.
// Expected: type error containing "E_LAMBDA_RETURN_TYPE_MISMATCH"
fn main() {
    // Declares `-> int` but body returns a String — mismatch.
    let _bad = actor |n: int| -> int {
        "not an int"
    };
}
